[project]
name = "dynamo-items"
description = "Experimental Python module for DynamoDB inspired by aws-sdk-ruby-record."
version = "0.1a1"
license = {text = "MIT"}
requires-python = ">=3.10,<4"
dependencies = [
    "boto3",
    "pydantic>=2.3"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "build",
]

[build-system]
requires = [
    "setuptools >= 61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E101",
    "F401",
    "F403",
    "I001",
    "N801",
    "N802",
    "N806"
]
src = [
    "dynamo-items",
]
